k8s/ingress/demo-javaapp-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-javaapp-dev-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app-dev.cloudandcosmos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-javaapp
                port:
                  number: 8080
